import org.springframework.boot.gradle.tasks.bundling.BootJar
import sun.jvmstat.monitor.MonitoredVmUtil.mainClass

/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id("org.springframework.boot") version "3.3.5"
    id("io.spring.dependency-management") version "1.1.6"
    application
    java
}

repositories {
    mavenCentral()
}

dependencies {
    implementation(libs.org.springframework.boot.spring.boot.starter.web)
    implementation(libs.org.springframework.boot.spring.boot.starter.data.jpa)
    implementation(libs.com.mysql.mysql.connector.j)
    implementation(libs.org.json.json)
    implementation(libs.com.google.code.gson.gson)
    implementation(libs.org.springframework.boot.spring.boot.starter.security)
    implementation(libs.org.springframework.session.spring.session.jdbc)
    implementation(libs.commons.net.commons.net)

    testImplementation(libs.org.springframework.boot.spring.boot.starter.test)
}

group = "com.jamii"
version = "0.0.1-SNAPSHOT"
description = "JamiiX"
java.sourceCompatibility = JavaVersion.VERSION_21

tasks.jar {
    enabled = false // Disable the plain jar
}

application {
    mainClass.set("com.jamii.ApplicationStart")
}

tasks.withType<org.springframework.boot.gradle.tasks.bundling.BootJar> {
    archiveBaseName.set("app")      // fixed jar name
    archiveVersion.set("0.0.1")
    mainClass.set("com.jamii.ApplicationStart")
}

tasks.withType<JavaCompile>() {
    options.encoding = "UTF-8"
}

tasks.withType<Javadoc>() {
    options.encoding = "UTF-8"
}

tasks.test {
    failOnNoDiscoveredTests = false
    enabled = false
}
